# BERT

./: .gitignore  README.md
1.0/: README.md
1.0/code/tests/: CMakeLists.txt
1.0/src/: Text File.json
2.0/: README.md
2.0/src/calculation_of_runtime/: calculation_of_runtime.ino
2.0/src/plant_watering/: plant_watering.ino
bert_1.0/code/tests/: pump_test.c  sensor_test.c
code/: bert.c
code/output/: bert
code/tests/: CMakeLists.txt  sensor_test.c
